Avoid overlapping text on small resolutions #105

--- a/components/component-playground.less
+++ b/components/component-playground.less
@@ -47,6 +47,7 @@
       right: 0;
       height: 50px;
       padding: 0 10px;
+      background: #222;
       color: #aaa;
       line-height: 50px;
       letter-spacing: 1px;
